Run every workflow

--- a/.github/workflows/daily_Nepal.yml
+++ b/.github/workflows/daily_Nepal.yml
@@ -2,9 +2,9 @@ name: Run Daily Report Nepal
 on:
   schedule:
     - cron: "0 6 * * *" # Run every day at 6 UTC
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -33,10 +33,10 @@ jobs:
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
-        # run: |
-        #    osmsg --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --timezone Nepal --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Nepal/Daily/stats_metadata.json --wild_tags
         run: |
-          osmsg --url "https://planet.openstreetmap.org/replication/minute" --format image csv --timezone Nepal --tags building highway waterway amenity --name stats --wild_tags --extract_last_day --country Nepal --name stats --read_from_metadata stats/Nepal/Daily/stats_metadata.json
+          osmsg --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --timezone Nepal --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Nepal/Daily/stats_metadata.json --wild_tags --include_changeset_meta
+        # run: |
+        #   osmsg --url "https://planet.openstreetmap.org/replication/minute" --format image csv --timezone Nepal --tags building highway waterway amenity --name stats --wild_tags --extract_last_day --country Nepal --name stats --read_from_metadata stats/Nepal/Daily/stats_metadata.json
 
       - name: add stats to git
 
