--- a/.github/workflows/weekly_hotosm.yml
+++ b/.github/workflows/weekly_hotosm.yml
@@ -1,10 +1,10 @@
 name: Run Daily Report Hotosm Hashtag
 on:
   schedule:
-    - cron: "0 6 * * *" # Run every day at 7 UTC
-  # push:
-  #   branches:
-  #     - master
+    - cron: "0 0 * * MON" # Run every Monday
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
 
       - name: Generate Daily Hashtag Stats
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --wild_tags --read_from_metadata stats/Global/Daily/hotosm/stats_metadata.json --hashtags hotosm
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --wild_tags --read_from_metadata stats/hotosm/Weekly/stats_metadata.json --hashtags hotosm
 
       - name: add stats to git
 
@@ -34,12 +34,12 @@ jobs:
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          cp *.csv stats/Global/Daily/hotosm/daily_stats.csv
-          cp stats_metadata.json stats/Global/Daily/hotosm/stats_metadata.json
+          cp *.csv stats/hotosm/Weekly/hotosm/weekly_stats.csv
+          cp stats_metadata.json stats/hotosm/Weekly/hotosm/stats_metadata.json
 
-          git add -f stats/Global/Daily/hotosm/daily_stats.csv
-          git add -f stats/Global/Daily/hotosm/stats_metadata.json
-          git commit -m "Updated Daily hotosm stats"
+          git add -f stats/hotosm/Weekly/hotosm/weekly_stats.csv
+          git add -f stats/hotosm/Weekly/hotosm/stats_metadata.json
+          git commit -m "Updated Weekly hotosm stats"
           git push
 
       - name: Tweet Stats
@@ -51,4 +51,4 @@ jobs:
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
           commit_id=$(git rev-parse --short HEAD)
-          python tweet.py --tweet_hotosm --tweet_last_day --git $commit_id
+          python tweet.py --tweet_hotosm --tweet_last_week --git $commit_id
