--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -2,9 +2,9 @@ name: Run Daily Report Global
 on:
   schedule:
     - cron: "0 7 * * *" # Run every day at 7 UTC
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
