--- a/.github/workflows/weekly_hotosm.yml
+++ b/.github/workflows/weekly_hotosm.yml
@@ -1,10 +1,10 @@
-name: Run Daily Report Hotosm Hashtag
+name: Run Weekly Report Hotosm Hashtag
 on:
   schedule:
     - cron: "0 0 * * MON" # Run every Monday
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -24,7 +24,7 @@ jobs:
           pip install -e . 
           pip install tweepy
 
-      - name: Generate Daily Hashtag Stats
+      - name: Generate Weekly Hashtag Stats
         run: |
           osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --wild_tags --read_from_metadata stats/hotosm/Weekly/stats_metadata.json --hashtags hotosm --force
 
