--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -55,3 +55,7 @@ jobs:
         run: |
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_last_day --tweet_global --git $commit_id
+          mv meta.md stats/Global/Daily/README.md
+          git add -f stats/Global/Daily/README.md
+          git commit -m "Updated Readme Daily Global"
+          git push
