--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -59,3 +59,8 @@ jobs:
         run: |
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_last_week  --tweet_nepal --git $commit_id
+          mv meta.md stats/Nepal/Weekly/README.md
+          git add -f stats/Nepal/Weekly/README.md
+          git commit -m "Updated Readme Weekly Nepal"
+          git push
+
