--- a/.github/workflows/weekly_hotosm.yml
+++ b/.github/workflows/weekly_hotosm.yml
@@ -52,3 +52,7 @@ jobs:
         run: |
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_hotosm --tweet_last_week --git $commit_id
+          mv meta.md stats/hotosm/Weekly/README.md
+          git add -f stats/hotosm/Weekly/README.md
+          git commit -m "Updated Readme Weekly Hotosm"
+          git push
