--- a/.github/workflows/weekly_hotosm.yml
+++ b/.github/workflows/weekly_hotosm.yml
@@ -53,6 +53,7 @@ jobs:
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_hotosm --tweet_last_week --git $commit_id
           mv meta.md stats/hotosm/Weekly/README.md
+          mv *.png stats/hotosm/Weekly/charts/
           git add -f stats/hotosm/Weekly/README.md
           git commit -m "Updated Readme Weekly Hotosm"
           git push
