--- a/.github/workflows/monthly_nepal.yml
+++ b/.github/workflows/monthly_nepal.yml
@@ -23,6 +23,7 @@ jobs:
           pip install flare-floss
           pip install -e . 
           pip install tweepy
+          pip install -r requirements.txt
 
       - name: Generate Monthly Stats
         env: #assign variables
