--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -59,5 +59,6 @@ jobs:
           mv meta.md stats/Global/Daily/README.md
           mv *.png stats/Global/Daily/charts/
           git add -f stats/Global/Daily/README.md
+          git add -f stats/Global/Daily/charts/
           git commit -m "Updated Readme Daily Global"
           git push
