--- a/.github/workflows/weekly_hotosm.yml
+++ b/.github/workflows/weekly_hotosm.yml
@@ -2,9 +2,9 @@ name: Run Weekly Report Hotosm Hashtag
 on:
   schedule:
     - cron: "0 2 * * MON" # Run every Monday at 2
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -56,5 +56,6 @@ jobs:
           mv meta.md stats/hotosm/Weekly/README.md
           mv *.png stats/hotosm/Weekly/charts/
           git add -f stats/hotosm/Weekly/README.md
+          git add -f stats/hotosm/Weekly/charts/
           git commit -m "Updated Readme Weekly Hotosm"
           git push
