--- a/.github/workflows/monthly_global.yml
+++ b/.github/workflows/monthly_global.yml
@@ -35,7 +35,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format image csv --extract_last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Global/Monthly/stats_metadata.json --wild_tags
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format image csv --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Global/Monthly/stats_metadata.json --all_tags
 
       - name: add stats to git
 
