--- a/.github/workflows/weekly_hotosm.yml
+++ b/.github/workflows/weekly_hotosm.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Generate Weekly Hashtag Stats
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --wild_tags --read_from_metadata stats/hotosm/Weekly/stats_metadata.json --hashtags hotosm --force
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/hotosm/Weekly/stats_metadata.json --hashtags hotosm --force
 
       - name: add stats to git
 
