disable run and also move top users chart to avoid duplication

--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -39,10 +39,13 @@ jobs:
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
           cp *.csv stats/Global/Daily/daily_global_stats.csv
+          mv *.png stats/Global/Daily/charts/top_users.png
           cp stats_metadata.json stats/Global/Daily/stats_metadata.json
 
           git add -f stats/Global/Daily/daily_global_stats.csv
           git add -f stats/Global/Daily/stats_metadata.json
+          git add -f stats/Global/Daily/charts/top_users.png
+          
           git commit -m "Updated Daily global stats"
           git push
 
