--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -42,10 +42,13 @@ jobs:
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
           cp *.csv stats/Nepal/Weekly/weekly_nepal_stats.csv
+          mv *.png stats/Nepal/Weekly/charts/top_users.png
           cp stats_metadata.json stats/Nepal/Weekly/stats_metadata.json
 
           git add -f stats/Nepal/Weekly/weekly_nepal_stats.csv
           git add -f stats/Nepal/Weekly/stats_metadata.json
+          git add -f stats/Nepal/Weekly/charts/top_users.png
+
 
           git commit -m "Updated Weekly Nepal Stats"
           git push
