--- a/.github/workflows/weekly_global.yml
+++ b/.github/workflows/weekly_global.yml
@@ -38,10 +38,12 @@ jobs:
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
           cp *.csv stats/Global/Weekly/weekly_global_stats.csv
+          mv *.png stats/Global/Weekly/charts/top_users.png
           cp stats_metadata.json stats/Global/Weekly/stats_metadata.json
 
           git add -f stats/Global/Weekly/weekly_global_stats.csv
           git add -f stats/Global/Weekly/stats_metadata.json
+          git add -f stats/Global/Weekly/charts/top_users.png
 
           git commit -m "Updated Weekly Global Stats"
           git push
