--- a/.github/workflows/daily_hotosm.yml
+++ b/.github/workflows/daily_hotosm.yml
@@ -2,9 +2,9 @@ name: Run Daily Report Hotosm Hashtag
 on:
   schedule:
     - cron: "0 6 * * *" # Run every day at 6 UTC
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -36,7 +36,7 @@ jobs:
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
           cp *.csv stats/hotosm/Daily/daily_stats.csv
-          mv *.png stats/hotosm/Daily/charts/top_users.png
+          cp *.png stats/hotosm/Daily/charts/top_users.png
           cp stats_metadata.json stats/hotosm/Daily/stats_metadata.json
 
           git add -f stats/hotosm/Daily/daily_stats.csv
