--- a/.github/workflows/weekly_hotosm.yml
+++ b/.github/workflows/weekly_hotosm.yml
@@ -36,7 +36,7 @@ jobs:
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
           cp *.csv stats/hotosm/Weekly/weekly_stats.csv
-          mv *.png stats/hotosm/Weekly/charts/top_users.png
+          cp *.png stats/hotosm/Weekly/charts/top_users.png
           cp stats_metadata.json stats/hotosm/Weekly/stats_metadata.json
 
           git add -f stats/hotosm/Weekly/weekly_stats.csv
