--- a/.github/workflows/daily_smforst.yml
+++ b/.github/workflows/daily_smforst.yml
@@ -2,9 +2,9 @@ name: Run Daily Report smforst Hashtag
 on:
   schedule:
     - cron: "0 5 * * *" # Run every day at 5 UTC
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -27,7 +27,7 @@ jobs:
 
       - name: Generate Daily Hashtag Stats
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/smforst/Daily/stats_metadata.json --hashtags smforst --charts
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/smforst/Daily/stats_metadata.json --hashtags smforst --charts --summary
 
       - name: add stats to git
 
@@ -40,6 +40,8 @@ jobs:
 
           cp *.csv $base_dir/daily_stats.csv
           cp *.png $base_dir/charts/
+          cp *.md $base_dir/Readme.md
+
           cp stats_metadata.json $base_dir/stats_metadata.json
 
           git add -f $base_dir/daily_stats.csv
