--- a/.github/workflows/daily_hotosm.yml
+++ b/.github/workflows/daily_hotosm.yml
@@ -2,9 +2,9 @@ name: Run Daily Report Hotosm Hashtag
 on:
   schedule:
     - cron: "0 6 * * *" # Run every day at 6 UTC
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -27,7 +27,7 @@ jobs:
 
       - name: Generate Daily Hashtag Stats
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/hotosm/Daily/stats_metadata.json --hashtags hotosm
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/hotosm/Daily/stats_metadata.json --hashtags hotosm --summary
 
       - name: add stats to git
 
@@ -36,12 +36,15 @@ jobs:
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
           cp *.csv stats/hotosm/Daily/daily_stats.csv
+          cp *.md stats/hotosm/Daily/README.md
+
           cp *.png stats/hotosm/Daily/charts/top_users.png
           cp stats_metadata.json stats/hotosm/Daily/stats_metadata.json
 
           git add -f stats/hotosm/Daily/daily_stats.csv
           git add -f stats/hotosm/Daily/stats_metadata.json
           git add -f stats/hotosm/Daily/charts/top_users.png
+          git add -f stats/hotosm/Daily/README.md
 
           git commit -m "Updated Daily hotosm stats"
           git push
@@ -56,7 +59,7 @@ jobs:
         run: |
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_hotosm --tweet_last_day --git $commit_id
-          mv meta.md stats/hotosm/Daily/README.md
+          mv summary.md stats/hotosm/Daily/README.md
           mv *.png stats/hotosm/Daily/charts/
           git add -f stats/hotosm/Daily/README.md
           git add -f stats/hotosm/Daily/charts/
