fix for smforst on readme

--- a/.github/workflows/daily_smforst.yml
+++ b/.github/workflows/daily_smforst.yml
@@ -41,13 +41,15 @@ jobs:
           
           cp *.csv $base_dir/daily_stats.csv
           cp *.png $base_dir/charts/
-          cp *.md $base_dir/Readme.md
+          mv summary.md $base_dir/Readme.md
 
           cp stats_metadata.json $base_dir/stats_metadata.json
 
           git add -f $base_dir/daily_stats.csv
           git add -f $base_dir/stats_metadata.json
           git add -f $base_dir/charts/
+          git add -f $base_dir/Readme.md
+
 
           git commit -m "Updated Daily smforst stats"
           git push
