--- a/.github/workflows/daily_smforst.yml
+++ b/.github/workflows/daily_smforst.yml
@@ -2,9 +2,9 @@ name: Run Daily Report smforst Hashtag
 on:
   schedule:
     - cron: "0 5 * * *" # Run every day at 5 UTC
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -41,7 +41,6 @@ jobs:
           cp *.csv $base_dir/daily_stats.csv
           cp *.png $base_dir/charts/
           mv summary.md $base_dir/Readme.md
-
           cp stats_metadata.json $base_dir/stats_metadata.json
 
           git add -f $base_dir/daily_stats.csv
